Changelog
=========

1.7.2 (unreleased)
------------------

- Nothing changed yet.


1.7.1 (2016-10-13)
------------------

- Allow hyphens, commas and single quotes in simple terms and simple searches.
  Fixes issue where a comma/hyphen/single quote in a search term causes
  search_pattern template to be circumvented.
  [mathias.leimgruber]


1.7.0 (2016-07-22)
------------------

- Implement link to remove the path from the querystring on the result page.
  [mathias.leimgruber]


1.6.3 (2016-07-18)
------------------

- Abort livesearch init if no searchfield is available to make the script failsafe.
  [elioschmutz]


1.6.2 (2016-07-15)
------------------

- Prevent the result text from read out through screenreaders
  [Kevin Bieri]

- Set searchwords as a non-required field.
  [elioschmutz]


1.6.1 (2016-07-11)
------------------

- Style selected facettes.
  [mathias.leimgruber]

- Add icon to facets dropdown menu.
  [Kevin Bieri]

- Fix faulty upgrade step which incorrectly added the Solr index queue processor
  utility in 1.5.0.
  [mbaechtold]


1.6.0 (2016-06-07)
------------------

- Add IShowInSearch and ISearchwords behaviors. [jone]

- Fix html structure of search in current folder. input in a tag is not allowed.
  [mathias.leimgruber]


1.5.3 (2016-05-23)
------------------

- BugFix: Search for "current folder". Label was some kind of unclickable. :-( omg sry.
  [mathias.leimgruber]


1.5.2 (2016-05-20)
------------------

- BugFix: Search for "current folder". Checkbox was unclickable.
  [mathias.leimgruber]

- Disable special links on facets dropdown.
  [Kevin Bieri]


1.5.1 (2016-04-29)
------------------

- Fix faulty upgrade step which removed the Solr connection manager utility
  in 1.5.0.
  [mbaechtold]

- Respect the facets configured in the Solr control panel.
  [mbaechtold]


1.5.0 (2016-03-31)
------------------

- Fix css selector of selected facest.
  [mathias.leimgruber]

- Implement accessible remove facet link.
  [mathias.leimgruber]
